opam-version: "1.2"
authors:      "Dave Scott <dave@recoil.org>"
maintainer:   "dave@recoil.org"
homepage:     "https://github.com/djs55/ocaml-dyndns"
dev-repo:     "https://github.com/djs55/ocaml-dyndns.git"
bug-reports:  "https://github.com/djs55/ocaml-dyndns/issues"
tags:         "org:mirage"
license:      "ISC"

build: [
  [ "dune" "subst" ] {pinned}
  [ "dune" "build" "-p" name "-j" jobs ]
]

build-test: [
  [ "dune" "runtest" "-p" name "-j" jobs ]
]

depends: [
  "dune" {build}
  "ipaddr"
  "cohttp"
]
available: [ ocaml-version >= "4.03.0" ]
